FD Labs Product Card 2018    fix modules > view all    fix long wrapping group links
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@80535 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/portraititem.css
+++ b/projects/Media/docroot/assets/css/common/portraititem.css
@@ -1470,6 +1470,9 @@ a.portrait-item-header-name:link {
   opacity: 0.8;
   box-sizing: border-box;
 }
+[data-feature-productcard="2018"] .portrait-item a.portrait-item-price-deal:link {
+	display: table;
+}
 
 [data-feature-productcard="2018"] .portrait-item-price .portrait-item-price-deal:after {
 	content: "\e876";
